feat: add descriptions for deploy

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="✨ Calculate your Average Stock Price!" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>✨ Stockulator</title>
+    <link rel="manifest" href="./manifest.json" />
+
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="image_src" href="./preview.png" />
+    <meta http-equiv="application-name" content="Stockulator" />
+    <meta name="title" content="Stockulator" />
+    <meta
+      name="description"
+      content="✨ Calculate your Average Stock Price! | ✨ 한국 주식 평균단가 계산기 | Calculate your Korean Stock Price Easily! This web provides real-time korean stock price, and tells you how the price changes when you buy more stocks."
+    />
+    <meta property="og:title" content="평균 단가 계산기" />
+    <meta
+      property="og:description"
+      content="✨ Calculate your Average Stock Price! | ✨ 한국 주식 평균단가 계산기 | Calculate your Korean Stock Price Easily! This web provides real-time korean stock price, and tells you how the price changes when you buy more stocks."
+    />
+    <meta property="og:image" content="https://i.ibb.co/vQyHzcS/preview.png" />
+
+    <title>한국 주식 평균단가 계산기 | Calculate your Average Stock Price!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app. </noscript>
