feat: add google meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="image_src" href="./preview.png" />
     <meta http-equiv="application-name" content="Stockulator" />
+    <meta name="google-site-verification" content="3011hbWv-l7NYdGT-mAk1rt6_bsGWgk5kZq3teShY24" />
     <meta name="title" content="Stockulator" />
     <meta
       name="description"
